--- a/back-end/TesteTecnicoEL.Api/TesteTecnicoEL.Api.csproj
+++ b/back-end/TesteTecnicoEL.Api/TesteTecnicoEL.Api.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\rafae\source\repos\TesteTecnicoEL\TesteTecncicoEL.Api\TesteTecncicoEL.Api.xml</DocumentationFile>
+    <DocumentationFile>C:\Users\rafae\source\repos\TesteTecnicoEL\TesteTecnicoEL.Api\TesteTecnicoEL.Api.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,6 +17,20 @@
   <ItemGroup>
     <ProjectReference Include="..\TesteTecnicoEL.Dominio\TesteTecnicoEL.Dominio.csproj" />
     <ProjectReference Include="..\TesteTecnicoEL.Infraestrutura\TesteTecnicoEL.Infraestrutura.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\templates\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\templates\contrato.pdf" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="wwwroot\templates\contrato.pdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 
