--- a/back-end/TesteTecnicoEL.Api/TesteTecnicoEL.Api.csproj
+++ b/back-end/TesteTecnicoEL.Api/TesteTecnicoEL.Api.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\rafae\source\repos\TesteTecnicoEL\TesteTecnicoEL.Api\TesteTecnicoEL.Api.xml</DocumentationFile>
+    <DocumentationFile>C:\Users\rafae\source\repos\TesteTecnicoEL\back-end\TesteTecnicoEL.Api\TesteTecnicoEL.Api.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
