refactor nos controller e nos testes

--- a/back-end/TesteTecnicoEL.TestesUnitarios/TesteTecnicoEL.TestesUnitarios.csproj
+++ b/back-end/TesteTecnicoEL.TestesUnitarios/TesteTecnicoEL.TestesUnitarios.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TesteTecnicoEL.Api\TesteTecnicoEL.Api.csproj" />
     <ProjectReference Include="..\TesteTecnicoEL.Dominio\TesteTecnicoEL.Dominio.csproj" />
   </ItemGroup>
 
